--- a/templates/cloud/partials/history_card.html
+++ b/templates/cloud/partials/history_card.html
@@ -12,6 +12,8 @@
     </div>
     <ul class="profile-document list-unstyled mb-0">
       {% for f in files %}
+      1
+      {% endfor %}
       <li>
         <div class="profile-document-list document-list-colored ms-4 d-flex align-items-center mt-2">
           <div class="icon flex-shrink-0">
