--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -28,8 +28,8 @@
                                     <p class="text-white fs-16 mb-4">Database</p>
                                     <ul class="list-unstyled footer-list mb-0">
                                       <li><a href="{% url 'database-index' %}"><i class="mdi mdi-chevron-right"></i>데이터베이스 개요</a></li>
-                                      <li><a href="{% url 'institution' %}"><i class="mdi mdi-chevron-right"></i>규제 사례</a></li>
-                                      <li><a href="{% url 'site' %}"><i class="mdi mdi-chevron-right"></i>규제 기준</a></li>
+                                      <li><a href="#"><i class="mdi mdi-chevron-right"></i>규제 사례</a></li>
+                                      <li><a href="#"><i class="mdi mdi-chevron-right"></i>규제 기준</a></li>
                                     </ul>
                                 </div>
                             </div><!--end col-->
