--- a/templates/rnd/create_case.html
+++ b/templates/rnd/create_case.html
@@ -62,8 +62,9 @@
             <label for="organization" class="form-label">기관 구분</label>
               <select class="form-select">
                 <option value="">기관</option>
-                <option value="kins">KINS</option>
                 <option value="kaeri">KAERI</option>
+                <option value="korad">KORAD</option>
+
               </select>
           </div>
 
