--- a/templates/rnd/KAERI_case.html
+++ b/templates/rnd/KAERI_case.html
@@ -10,6 +10,11 @@
     height: 100px !important;
     max-width: 80% !important;
   }
+
+  .post-title {
+    vertical-align: middle;
+    display: inline;
+  }
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -51,52 +56,9 @@
       </div>
 
       <div class="col-lg-10">
-        <div class="candidate-list">
-          <div class="candidate-list-box card mt-2">
-            <div class="card-body p-4">
-                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
-                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
-                    <ul class="list-inline mb-0 text-muted">
-                      <li class="list-inline-item">
-                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
-                        <i class="mdi mdi-account-circle"></i> 홍길동
-                      </li>
-                    </ul>
-                  </div>
-            </div>
-          </div>
-
-          <div class="candidate-list-box card mt-2">
-            <div class="card-body p-4">
-                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
-                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
-                    <ul class="list-inline mb-0 text-muted">
-                      <li class="list-inline-item">
-                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
-                        <i class="mdi mdi-account-circle"></i> 홍길동
-                      </li>
-                    </ul>
-                  </div>
-            </div>
-          </div>
-
-          <div class="candidate-list-box card mt-2">
-            <div class="card-body p-4">
-                  <div class="candidate-list-content mt-3 mt-lg-0" style="display:flex; justify-content:space-between">
-                    <h5 class="fs-19 mb-0" style="display:inline"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> KAERI 1차 보고서 </a></h5>
-                    <ul class="list-inline mb-0 text-muted">
-                      <li class="list-inline-item">
-                        <i class="mdi mdi-calendar-clock"></i> 2023-04-18
-                        <i class="mdi mdi-account-circle"></i> 홍길동
-                      </li>
-                    </ul>
-                  </div>
-            </div>
-          </div>
-
-
-        </div>
+        {% include 'partials/rnd_post_card.html' %}
       </div>
+
     </div>
   </div>
 </section>
