--- a/templates/partials/rnd_base.html
+++ b/templates/partials/rnd_base.html
@@ -14,7 +14,12 @@
 
   <!-- App favicon -->
   <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
-
+  <style>
+    .page-title-box {
+      padding-top: 180px !important;
+      padding-bottom: 100px !important;
+    }
+  </style>
   {% block css %}
 
 
@@ -47,17 +52,15 @@
       min-height: 100vh;
     }
 
-    @media (min-width: 1400px)
-    .container {
-      max-width: 1320px!important;
+    @media (min-width: 1400px) .container {
+      max-width: 1320px !important;
     }
-
   </style>
 </head>
 
 
 <script>
-  function loadDate(){
+  function loadDate() {
     document.getElementById('dateControlInput').defaultValue = new Date().toISOString().substring(0, 10);
   }
 </script>
