--- a/templates/rnd/index.html
+++ b/templates/rnd/index.html
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="card-body">
                                             <a href="#" class="primary-link">
-                                                <h5 class="fs-17">제목1</h5>
+                                                <h5 class="fs-17">지원 프로그램 안내</h5>
                                             </a>
                                             <p class="text-muted">The final text is not yet avaibookmark-label. Dummy texts have Internet tend
                                                 been in use by typesetters since century.</p>
@@ -121,7 +121,7 @@
                                         </div>
                                         <div class="card-body">
                                             <a href="#" class="primary-link">
-                                                <h5 class="fs-17">제목2</h5>
+                                                <h5 class="fs-17">기관 안내</h5>
                                             </a>
                                             <p class="text-muted">Due to its widespread use as filler text for layouts, non-readability
                                                 is of great importance: human perception.</p>
@@ -150,7 +150,7 @@
                                         </div>
                                         <div class="card-body">
                                             <a href="#" class="primary-link">
-                                                <h5 class="fs-17">제목3</h5>
+                                                <h5 class="fs-17">Q&A 게시판</h5>
                                             </a>
                                             <p class="text-muted">One disadvantage of Lorum Ipsum is that in Latin certain letters
                                                 appear more frequently than others.</p>
@@ -170,12 +170,11 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-7">
                                     <div class="text-center">
-                                        <h2 class="text-primary mb-4">Browse Our <span class="text-warning fw-bold">5,000+</span> Latest
-                                            Jobs</h2>
-                                        <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with
-                                            the right freelancers.</p>
+                                        <h2 class="text-primary mb-4">Browse Our <span class="text-warning fw-bold">100+</span> Latest
+                                            Works</h2>
+                                        <p class="text-muted">준비중</p>
                                         <div class="mt-4 pt-2">
-                                            <a href="javascript:void(0)" class="btn btn-primary btn-hover">Started Now <i class="uil uil-rocket align-middle ms-1"></i></a>
+                                            <a href="javascript:void(0)" class="btn btn-primary btn-hover"><i class="uil uil-rocket align-middle ms-1"></i></a>
                                         </div>
                                     </div>
                                 </div><!--end col-->
