--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -57,8 +57,8 @@
 <!-- END SHAPE -->
 
 
-<section class="section">
-  <div style="padding:5%">
+<section>
+  <div style="padding:3%">
 
     <div class="row">
       <div class="col-lg-12">
@@ -184,7 +184,7 @@
                   <td></td>
                 </tr>
 
-                
+
                 <tr>
                   <th>처분장 설계</th>
                   <td>
