--- a/templates/partials/rnd_regulation_card.html
+++ b/templates/partials/rnd_regulation_card.html
@@ -2,13 +2,12 @@
   <div class="card-body p-4">
     <div class="" style="display:flex; justify-content:space-between">
       <div>
-        <span class="badge bg-soft-primary">검토중</span>
-        <h5 class="post-title fs-17 mb-0"><a href="{% url 'rnd:case_detail' %}" class="primary-link"> 1차 보고서 </a></h5>
+        <h5 class="post-title fs-17 mb-0"><a href="{% url 'rnd:regulation_detail' pk=reg.pk %}" class="primary-link">{{ reg.title }} </a></h5>
       </div>
       <ul class="list-inline mb-0 text-muted">
         <li class="list-inline-item">
           <i class="mdi mdi-calendar-clock"></i> 2023-04-18
-          <i class="mdi mdi-account-circle"></i> 홍길동
+          <i class="mdi mdi-account-circle"></i> {{ reg.writer }}
         </li>
       </ul>
     </div>
