--- a/templates/rnd/about.html
+++ b/templates/rnd/about.html
@@ -19,8 +19,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">R&D 지원제도 안내 </h3>
-
+          <h3 class="mb-4">R&D  지원 프로그램 안내 </h3>
         </div>
       </div>
       <!--end col-->
@@ -46,14 +45,22 @@
             <div class="col-lg-6">
                 <div class="section-title text-center">
                     <h3 class="title">개요</h3>
-                    <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
-                        right freelancers.</p>
                 </div>
             </div>
             <!--end col-->
         </div>
-        <div class="row">
-          <div style="height:400px; border: 1px solid black;"></div>
+        <div class="row text-center">
+            <p class="text-muted">
+              R&D 지원 프로그램(가칭)은 다부처 연구과제에서 생성된 연구결과물(연차보고서 등)을 규제 측면에서 검토하는 프로그램입니다.<br>
+              이 프로그램을 통해 다부처 연구과제에서 나오는 연구성과물을 규제 관점에서 검토하여, 국내 원자력 안전과 관련된 이해와 투명성을 확보하고자 합니다.<br><br>
+              R&D 지원 프로그램의 주요 내용은 다음과 같습니다:<br>
+               1. 전략과제 1, 2 검토: 과기부 및 산업부 소관 다부처 연구과제에서 나온 연구결과물을 규제 관점에서 검토합니다.<br>
+               2. 홈페이지를 통한 정보 공유: 규제 측면에서의 연구 검토 사례를 홈페이지를 통해 공유하여, 연구성과물에 대한 규제 프로세스를 이해하고 접근성을 높입니다.<br>
+               3. 심층처분 데이터베이스 연결: 국내 심층처분사업과 연결하여, 규제 관련 정보를 확장하고 국내 원자력 안전에 대한 규제 이해도를 높이고자 합니다.<br>
+              해당 제도를 통해 규제 측면에 대한 이해와 협력을 증진시키며 지식과 투명성을 제고하여 국내 원자력 안전을 강화하는 데 일조할 계획입니다.<br>
+              더 많은 정보와 업데이트는 홈페이지를 통해 확인하실 수 있습니다.<br>
+
+            </p>
         </div>
         <!--end row-->
         <div class="row">
@@ -62,54 +69,7 @@
     </div>
     <!--end container-->
 </section>
-<section class="section bg-light">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="section-title text-center mb-4 pb-2">
-                    <h4 class="title">제도 안내</h4>
-                    <p class="text-muted mb-1">Post a job to tell us about your project. We'll quickly match you
-                        with the right freelancers.</p>
-                </div>
-            </div><!--end col-->
-        </div><!--end row-->
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <ul class="job-list-menu nav nav-pills nav-justified flex-column flex-sm-row mb-4" id="pills-tab"
-                    role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="recent-jobs-tab" data-bs-toggle="pill"
-                            data-bs-target="#recent-jobs" type="button" role="tab" aria-controls="recent-jobs"
-                            aria-selected="true">검토범위</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="featured-jobs-tab" data-bs-toggle="pill"
-                            data-bs-target="#featured-jobs" type="button" role="tab" aria-controls="featured-jobs"
-                            aria-selected="false">검토절차</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="freelancer-tab" data-bs-toggle="pill"
-                            data-bs-target="#freelancer" type="button" role="tab" aria-controls="freelancer"
-                            aria-selected="false">관련법규</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="part-time-tab" data-bs-toggle="pill"
-                            data-bs-target="#part-time" type="button" role="tab" aria-controls="part-time"
-                            aria-selected="false">필요서류</button>
-                    </li>
 
-                </ul>
-            </div>
-            <!--end col-->
-        </div>
-        <!--end row-->
-        <div class="row">
-          <div style="height:500px; border: 1px solid black;"></div>
-        </div>
-        <!--end row-->
-    </div>
-    <!--end container-->
-</section>
 {% endblock content %}
 {% block javascript %}
 <!-- JAVASCRIPT -->
