--- a/templates/rnd/institute.html
+++ b/templates/rnd/institute.html
@@ -2,155 +2,133 @@
 {% load static %}
 {% block title %}기관소개{% endblock title %}
 {% block content %}
-                    <!-- Start home -->
-                    <section class="page-title-box">
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-md-6">
-                                    <div class="text-center text-white">
-                                        <h3 class="mb-4">기관소개</h3>
-                                        <div class="page-next">
-                                            <nav class="d-inline-block" aria-label="breadcrumb text-center">
-                                                <ol class="breadcrumb justify-content-center">
-                                                    <li class="breadcrumb-item"><a href="{% url 'index'%}">Homepage</a></li>
-                                                    <li class="breadcrumb-item active" aria-current="page"> 기관소개 </li>
-                                                </ol>
-                                            </nav>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!--end col-->
-                            </div>
-                            <!--end row-->
-                        </div>
-                        <!--end container-->
-                    </section>
-                    <!-- end home -->
+<!-- Start home -->
+<section class="page-title-box">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center text-white">
+          <h3 class="mb-4">기관소개</h3>
+          <div class="page-next">
+            <nav class="d-inline-block" aria-label="breadcrumb text-center">
+              <ol class="breadcrumb justify-content-center">
+                <li class="breadcrumb-item"><a href="{% url 'index'%}">Homepage</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> 기관소개 </li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<!-- end home -->
 
-                    <!-- START SHAPE -->
-                    <div class="position-relative" style="z-index: 1">
-                        <div class="shape">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
-                                <path fill="#FFFFFF" fill-opacity="1"
-                                    d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
-                            </svg>
-                        </div>
-                    </div>
-                    <!-- END SHAPE -->
+<!-- START SHAPE -->
+<div class="position-relative" style="z-index: 1">
+  <div class="shape">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#FFFFFF" fill-opacity="1" d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+    </svg>
+  </div>
+</div>
+<!-- END SHAPE -->
 
-                    <!-- START COMPONETS-PAGE -->
-                    <section class="section">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    <div class="d-none d-lg-block card" style="padding: 12px; position:sticky; top:90px;">
-                                        <ul class="nav nav-pills flex-column" id="elementsBar">
-                                            <li class="nav-item">
-                                                <a href="#intro" class="nav-link">검토기관 소개</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#about" class="nav-link">검토기관 안내</a>
-                                            </li>
+<!-- START COMPONETS-PAGE -->
+<section class="section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <!--end col-->
+      <div class="col-lg-11">
+        <div class="card" id="intro">
+          <div class="p-4 border-bottom">
+            <h5 class="mb-0">검토기관 소개</h5>
+          </div>
+          <div class="card-body p-4">
+            <div class="p-3">
+            <h5 class="card-title">설립목적</h5>
+            <img src="{% static 'images/about/설립목적.png' %}" alt="vision" class="img-fluid">
+            </div>
 
-                                            <li class="nav-item">
-                                                <a href="#contact" class="nav-link">조직도/연락처</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#location" class="nav-link">오시는길</a>
-                                            </li>
-                                        </ul>
-                                    </div><!--end ui-elements-->
-                                </div><!--end col-->
-                                <div class="col-lg-8">
-                                    <div class="card"  id="intro">
-                                        <div class="p-4 border-bottom">
-                                            <h5 class="mb-0">검토기관 소개</h5>
-                                        </div>
-                                        <div class="card-body p-4">
-                                          <div style="height:250px; border: 1px solid black;"></div>
-                                        </div>
-                                        <div class="card-body p-4">
-                                          <div style="height:50px; border: 1px solid black;"></div>
+            <div class="p-3">
+            <h5 class="card-title">비전</h5>
+            <img src="{% static 'images/about/비전.png' %}" alt="vision" class="img-fluid">
+            </div>
 
-                                        </div>
-                                    </div>
-                                    <div class="card mt-4" id="about">
-                                        <div class="p-4 border-bottom">
-                                            <h5 class="mb-0">검토기관 안내</h5>
-                                        </div>
-                                        <div class="card-body p-4">
-                                          <div style="height:250px; border: 1px solid black;"></div>
+            <div class="p-3">
+            <h5 class="card-title">경영방침</h5>
+            <img src="{% static 'images/about/경영방침.png' %}" alt="vision" class="img-fluid">
+            </div>
 
-                                        </div>
-                                    </div>
-                                    <div class="card mt-4" id="contact">
-                                        <div class="p-4 border-bottom">
-                                            <h5 class="mb-0">조직도/연락처 </h5>
-                                        </div>
-                                        <div class="card-body p-4">
+          </div>
+        </div>
 
-                                            <h6 class="card-title">Image</h6>
-                                            <p class="text-muted">Use classes </p>
-                                            <div style="height:250px; border: 1px solid black;"></div>
+        <div class="card mt-4" id="location">
+          <div class="p-4 border-bottom">
+            <h5 class="mb-0">오시는길</h5>
+          </div>
+          <div class="card-body p-4">
 
-                                        </div>
-                                    </div><!--end images-->
+            <div id="map" style="width:100%;height:400px;"></div>
+            <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d8c95ba73048aafd71baaa76dab57995"></script>
+            <script>
+              var container = document.getElementById('map');
+              var options = {
+                center: new kakao.maps.LatLng(36.3748543, 127.3680669),
+                level: 3
+              };
 
-                                    <div class="card mt-4" id="location">
-                                        <div class="p-4 border-bottom">
-                                            <h5 class="mb-0">오시는길</h5>
-                                        </div>
-                                        <div class="card-body p-4">
+              var map = new kakao.maps.Map(container, options);
 
-                                            <h6 class="card-title">Basic</h6>
-                                            <p class="text-muted">Toggle a working modal demo by clicking the button below. It will slide down and fade in from the top of the page.</p>
+              var markerPosition = new kakao.maps.LatLng(36.3748543, 127.3680669);
+              var marker = new kakao.maps.Marker({
+                position: markerPosition
+              });
+              marker.setMap(map);
 
-                                            <button type="button" class="btn btn-primary waves-effect waves-light" data-bs-toggle="modal" data-bs-target="#myModal">Standard modal</button>
-                                            <!-- SIMPLE MODALS -->
-                                            <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="myModalLabel" style="display: none;" aria-hidden="true">
-                                                <div class="modal-dialog modal-dialog-centered">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h5 class="modal-title mt-0" id="myModalLabel">Modal Heading</h5>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <p>Cras mattis consectetur purus sit amet fermentum.
-                                                                Cras justo odio, dapibus ac facilisis in,
-                                                                egestas eget quam. Morbi leo risus, porta ac
-                                                                consectetur ac, vestibulum at eros.</p>
+              var iwContent =
+                '<div style="padding:5px;font-size:13px;color:black">한국원자력안전기술원<br><a href="https://map.kakao.com/link/map/한국원자력안전기술원,36.3748543, 127.3680669" style="color:blue;font-size:11px" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/한국원자력안전기술원,36.3748543, 127.3680669" style="color:blue;font-size:11px" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+                iwPosition = new kakao.maps.LatLng(36.3748543, 127.3680669); //인포윈도우 표시 위치입니다
 
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">Close</button>
-                                                            <button type="button" class="btn btn-primary waves-effect waves-light">Save changes</button>
-                                                        </div>
-                                                    </div><!-- /.modal-content -->
-                                                </div><!-- /.modal-dialog -->
-                                            </div><!-- SIMPLE MODALS -->
-                                        </div>
-                                    </div><!--end modal-->
-                                </div><!--end col-->
-                            </div><!--end row-->
-                        </div><!--end container-->
-                    </section>
-                    <!-- END COMPONETS-PAGE -->
+              // 인포윈도우를 생성합니다
+              var infowindow = new kakao.maps.InfoWindow({
+                position: iwPosition,
+                content: iwContent,
+              });
+
+              // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+              infowindow.open(map, marker);
+            </script>
+          </div>
+        </div>
+        <!--end modal-->
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<!-- END COMPONETS-PAGE -->
 {% endblock content %}
 {% block javascript %}
-        <!-- JAVASCRIPT -->
-        <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
-        <script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
+<!-- JAVASCRIPT -->
+<script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
 
 
-        <!-- Gumshoe Js -->
-        <script src="{% static 'libs/gumshoejs/dist/gumshoe.min.js' %}"></script>
+<!-- Gumshoe Js -->
+<script src="{% static 'libs/gumshoejs/dist/gumshoe.min.js' %}"></script>
 
-        <script src="{% static 'libs/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
+<script src="{% static 'libs/smooth-scroll/dist/smooth-scroll.polyfills.min.js' %}"></script>
 
-        <!-- Switcher Js -->
-        <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
+<!-- Switcher Js -->
+<script src="{% static 'js/cloud/switcher.init.js' %}"></script>
 
-        <script src="{% static 'js/cloud/componets.init.js' %}"></script>
+<script src="{% static 'js/cloud/componets.init.js' %}"></script>
 
-        <script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/app.js' %}"></script>
 {% endblock javascript %}
