--- a/templates/partials/rnd_regulation_card.html
+++ b/templates/partials/rnd_regulation_card.html
@@ -6,7 +6,7 @@
       </div>
       <ul class="list-inline mb-0 text-muted">
         <li class="list-inline-item">
-          <i class="mdi mdi-calendar-clock"></i> 2023-04-18
+          <i class="mdi mdi-calendar-clock"></i> {{ reg.creation_date|date:"Y-m-d" }}
           <i class="mdi mdi-account-circle"></i> {{ reg.writer }}
         </li>
       </ul>
